# pitterm

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  pitterm.sln
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
artifacts/publish/linux-arm64/: appsettings.json
scripts/: install.ps1  install.sh  release.ps1  release.sh
src/: main.cpp
src/F1.Core/Models/: ConstructorStanding.cs  Driver.cs  DriverStanding.cs  Lap.cs  PitStop.cs  Race.cs  RaceResult.cs  Season.cs  Session.cs  WeatherSample.cs
src/F1.Core/Services/: IConstructorStandingsService.cs  IDriverService.cs  IDriverStandingsService.cs  ILapService.cs  IPitStopService.cs  IRaceResultsService.cs  IRaceService.cs  ISeasonService.cs  ISessionService.cs  IWeatherService.cs
src/F1.Core/State/: AppState.cs
src/F1.Infrastructure/: F1.Infrastructure.csproj
src/F1.Infrastructure/Jolpica/: JolpicaClient.cs  JolpicaDriverDto.cs  JolpicaDriverResponseDto.cs
src/F1.Infrastructure/OpenF1/: CachedOpenF1Client.cs  IOpenF1Client.cs  OpenF1CacheOptions.cs  OpenF1Client.cs
src/F1.Infrastructure/Services/: ConstructorStandingsService.cs  DriverService.cs  DriverStandingsService.cs  LapService.cs  PitStopService.cs  RaceResultsService.cs  RaceService.cs  SeasonService.cs  SessionService.cs  WeatherService.cs
src/F1Tui/: F1Tui.csproj  Program.cs  TerminalApp.cs  appsettings.Development.json  appsettings.json
src/data/: driver.hpp  lap.hpp  meeting.hpp  models.hpp  openf1_client.cpp  openf1_client.hpp  pit_stop.hpp  race_control.hpp  session.hpp  stint.hpp
src/state/: app_state.hpp  cache.hpp  session_context.hpp  state.hpp
src/ui/: app.cpp  app.hpp
tests/F1.Core.Tests/: F1.Core.Tests.csproj  SeasonTests.cs
tests/F1.Infrastructure.Tests/: CachedOpenF1ClientTests.cs  ConstructorStandingsMeetingScopeTests.cs  ConstructorStandingsServiceTests.cs  DriverStandingsMeetingScopeTests.cs  DriverStandingsServiceTests.cs  F1.Infrastructure.Tests.csproj  InMemoryAppStateStoreTests.cs  RaceResultsServiceTests.cs  RaceServiceTests.cs  SeasonServiceTests.cs  SessionServiceTests.cs  StartupConfigurationTests.cs
(+23 files in other folders)
